ipc/ipdl/test/ipdl/ok/multiManager2.ipdl
include protocol "multiManaged.ipdl";

protocol multiManager2 {
    manages multiManaged;

child:
    multiManaged();
};
