ipc/ipdl/test/ipdl/error/ManagerForgot.ipdl
include protocol ForgottenManagee;

// See ForgottenManagee.ipdl. This includes ForgottenManagee to
// ensure that loading this file fails.

protocol ManagerForgot {
child:
    async Msg();
};
